--- a/arch/arm/boot/dts/am33xx.dtsi
+++ b/arch/arm/boot/dts/am33xx.dtsi
@@ -36,6 +36,8 @@
 		phy1 = &usb1_phy;
 		ethernet0 = &cpsw_emac0;
 		ethernet1 = &cpsw_emac1;
+                mmc1 = &mmc1;   /* Fixed to mmcblk1 for &mmc1 */
+                mmc0 = &mmc2;   /* Fixed to mmcblk0 for &mmc2 */
 	};
 
 	cpus {
