--- a/arch/arm/boot/dts/am335x-smarc-common.dtsi
+++ b/arch/arm/boot/dts/am335x-smarc-common.dtsi
@@ -680,11 +680,13 @@
 &cpsw_emac0 {
 	phy_id = <&davinci_mdio>, <0>;
 	phy-mode = "rmii";
+        dual_emac_res_vlan = <1>;
 };
 
 &cpsw_emac1 {
 	phy_id = <&davinci_mdio>, <1>;
 	phy-mode = "rmii";
+        dual_emac_res_vlan = <2>;
 };
 
 &phy_sel {
