initial commit, upgrade SMARC-T437X kernel version to v4.9

--- a/arch/arm/boot/dts/am4372.dtsi
+++ b/arch/arm/boot/dts/am4372.dtsi
@@ -483,7 +483,7 @@
 			ti,hwmods = "rtc";
 			clocks = <&clk_32768_ck>;
 			clock-names = "int-clk";
-			system-power-controller;
+			/*system-power-controller;*/
 			status = "disabled";
 		};
 
