--- a/arch/arm/boot/dts/am437x-smarct437x.dts
+++ b/arch/arm/boot/dts/am437x-smarct437x.dts
@@ -918,6 +918,7 @@
         pinctrl-0 = <&cpsw_default>;
         pinctrl-1 = <&cpsw_sleep>;
         dual_emac = <1>;
+        active_slave = <1>;
         status = "okay";
 };
 
@@ -936,7 +937,7 @@
 
 &cpsw_emac1 {
         phy_id = <&davinci_mdio>, <7>;
-        phy-mode = "rgmii";
+        phy-mode = "rgmii-txid";
         dual_emac_res_vlan = <2>;
 };
 
